--- a/index.html
+++ b/index.html
@@ -89,14 +89,15 @@
                 remember as our project idea entails fusing human resources with AI. We came up with the moniker H+AI. The name of our group makes it easy to
                 start a conversation and to identify ourselves. It also appropriately identifies us as introverts because we are naturally reserved. </p>
             <h3>1.1. Santoso David</h3>
-            <p>My name is Santoso David, my student ID is S3824107, and my email is s3824107@rmit.edu.vn. I am majoring in information technolog (IT) in RMIT Vietnam
-               My dad is Taiwanese, and my mom is Indonesian. Although I can not speak Indonesian fluently, but I can speak Mandarin and Taiwanese, because I went to
-               Taipei International School from kindergarten all the way high school. I had a huge interest about computer from a very young age, I decided I want to
-               persue my career towards IT during high school.They all have one thing in common: making a lot of money, having lots of spare time, and having the
-               opportunity to travel for work. I started to wonder what kinds of employment in the future will have opportunities like this. When I developed my
-               answer, I was a young person, and I had no notion what set information technology apart from engineering. Fortunately, I was quite skilled with
-               computers when I was a small child; all I know is that these works include computers.  But during the first semester in RMIT University, I hit a
-               few bumps during the courses, but I still put in my effort and the spirit of not giving up, hopefully I can pass the courses that I enrolled in.</p>
+            <p>MMy name is Santoso David, my student ID is S3824107, and my email is s3824107@rmit.edu.vn. I am majoring in information technology (IT) at
+                RMIT Vietnam. My dad is Taiwanese, and my mom is Indonesian. Although I can not speak Indonesian fluently, I can speak Mandarin and Taiwanese,
+                because I went to Taipei International School from kindergarten all the way to high school. I had a huge interest in computers from a very young
+                age. I decided I want to pursue my career towards IT during high school.They all have one thing in common: making a lot of money, having lots of
+                spare time, and having the opportunity to travel for work. I started to wonder what kinds of employment in the future will have opportunities like
+                this. When I developed my answer, I was a young person, and I had no notion of what set information technology apart from engineering. Fortunately,
+                I was quite skilled with computers when I was a small child; all I know is that these works include computers. But during the first semester in
+                RMIT University, I hit a few bumps during the courses, but I still put in my effort and the spirit of not giving up, hopefully I can pass the
+                courses that I enrolled in.</p>
             <h3>1.2. Ho Van Khoa</h3>
             <p>My name is Ho Van Khoa (s3997024), and I attend RMIT University Vietnam where I study information technology (IT). Because of the impression that
                 artificial intelligence (AI) gives us and how it has transformed our working and communication processes, my future minor would be artificial
