--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <section id="1. TEAM PROFILE">
         <div class="container">
             <p> </p>
-            <h1 id="1. TEAM PROFILE">1. TEAM PROFILE !</h1>
+            <h1 id="1. TEAM PROFILE">1. TEAM PROFILE</h1>
             <p>We decided to give our team the name H+AI. H+AI is pronounced as "hi." We wanted to make sure that our team name was approachable and easy to
                 remember as our project idea entails fusing human resources with AI. We came up with the moniker H+AI. The name of our group makes it easy to
                 start a conversation and to identify ourselves. It also appropriately identifies us as introverts because we are naturally reserved. </p>
@@ -121,7 +121,7 @@
 
     <section id="2. TOOLS">
         <div class="container">
-            <h2>Tools</h2>
+            <h2>2. Tools</h2>
             <h3>2.1. Website</h3>
             <p><a href="https://davids100300.github.io/H-AI"/>H+AI AI Recruitment</a><br>
                 You can access the project our current group is working on by clicking this link. In this group project, everyone in the group collaborates to achieve
@@ -144,7 +144,7 @@
 
     <section id="3. PROJECT DESCRIPTION">
         <div class="container">
-            <h2>Project Description</h2>
+            <h2>3. Project Description</h2>
             <h3>3.1. Topic</h3>
             <p>The purpose of the project is to innovate a recruitment application utilizing the adaptation of Artificial Intelligence into traditional human
                 resource practices, particularly for the hiring process. Specifically, the application will comprise a wide range of key core human resource
@@ -176,7 +176,7 @@
     </section>
     <section id="4. DETAILED AIMS">
         <div class="container">
-            <h2>Detailed Aims</h2>
+            <h2>4. Detailed Aims</h2>
             <h3>4.1. Aims</h2>
             <p>The aim of this IT project is to revolutionize the recruitment process in businesses by maximizing the power of artificial intelligence (AI). For an
                 easy term, we planned to program our AI system to stimulate thinking and reasoning of a recruiter. Our goal is to create a recruitment system that
@@ -213,7 +213,7 @@
                 evaluated to determine priorities and fallback options and these order will be:
             </p>
             <p><
-            Goal 1: Better outcomes for the workforce. Establishing a strong and committed workforce that aligns with the company's purposes and goals forms the foundation for success in internal/international markets.
+            Goal 1: Better outcomes for the workforce. Establishing a strong and committed workforce that aligns with the companys purposes and goals forms the foundation for success in internal/international markets.
             </p>
             <p>
             Goal 2: multiculturalism can be considered as the next priority, as it contributes to long-term growth and competitiveness by creating more competitive and efficient working environments. 
@@ -512,7 +512,7 @@
     </section>
     <section id="5. SKILLS AND JOBS">
         <div class="container">
-            <h2>Skills and Jobs</h2>
+            <h2>5. Skills and Jobs</h2>
             <h3>Position Description 1: Technical Lead - AI Leader</h3>
             <p>
             Description and Responsibilities:
@@ -607,7 +607,7 @@
         </div>
         <section id="6. GROUP REFLECTION">
         <div class="container">
-            <h2>Group Reflection</h2>
+            <h2>6. Group Reflection</h2>
             <p>At the end of the assignment, our group performed a thorough analysis of the project. The tasks at hand have been distributed evenly and efficiently,
                 contributing to a smooth working flow and ensuring the outcome of the project is achieved. Additionally, our team has communicated effectively and
                 maintained open and clear verbal interactions with each other, altogether creating a thoughtful collaboration of teamwork. 
