--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <li><a href="#1. TEAM PROFILE">TEAM PROFILE</a></li>
                 <li><a href="#2. TOOLS">TOOLS</a></li>
                 <li><a href="#3. PROJECT DESCRIPTION">PROJECT DESCRIPTION</a></li>
-                <li><a href="#4. DETAILED AIMS">DETAILED AIMS</a></li>
+                <li><a href="#4. DETAILED DESCRIPTION">DETAILED DESCRIPTION</a></li>
                 <li><a href="#5. SKILLS AND JOBS">SKILLS AND JOBS</a></li>
                 <li><a href="#6. GROUP REFLECTION">GROUP REFLECTION</a></li>
             </ul>
@@ -154,12 +154,12 @@
                 streamlining their navigation through the recruitment process with ease.
             </p>
             <h3>3.2. Motivation</h3>
-            <p>The motivation behind our project is to utilize AI technology within a business context to transform the recruitment process. The ultimate goal of
-                our project is to improve hiring outcomes, reducing in noteworthy working time and cost savings implementing task automation. The statement is in
+            <p>The motivation behind our project is to utilise AI technology within a business context to transform the recruitment process. The ultimate goal of
+                our project is to improve hiring outcomes, reducing noteworthy working time and cost savings implementing task automation. The statement is in
                 accordance with contemporary information technology patterns as it highlights our capacity to implement nascent technologies in a pragmatic manner,
                 demonstrating knowledge in software engineering, data analytics, and user interface/user experience. Upon engaging in the project, we would be able
-                to develop our proficiency in information technolgy, specifically artificial intelligence, as well as further soft skills in critical thinking, etc
-                thereby presenting a persuasive argument to current business context regarding the utilization of technology for consequential resolutions.
+                to develop our proficiency in information technology, specifically artificial intelligence, as well as further soft skills in critical thinking,
+                etc thereby presenting a persuasive argument to current business context regarding the utilisation of technology for consequential resolutions.
             </p>
             <h3>3.3. Landscape</h3>
             <p>Within the realm of recruitment systems and products, there exist numerous functioning solutions and competitors that incorporate artificial
@@ -174,9 +174,9 @@
             </p>
         </div>
     </section>
-    <section id="4. DETAILED AIMS">
+    <section id="4. DETAILED DESCRIPTION">
         <div class="container">
-            <h2>4. Detailed Aims</h2>
+            <h2>4. Detailed Description</h2>
             <h3>4.1. Aims</h2>
             <p>The aim of this IT project is to revolutionize the recruitment process in businesses by maximizing the power of artificial intelligence (AI). For an
                 easy term, we planned to program our AI system to stimulate thinking and reasoning of a recruiter. Our goal is to create a recruitment system that
@@ -316,7 +316,7 @@
                 Conduct a final review of the project and if able plan for future development..
             </p>
             <p>
-                Tran Sang            </p>
+                Tran Minh Sang            </p>
             <p>
                 Planning and starting the project, set project objectives, parameters, and specifications. 
                 Develop the backend, frontend, and database of the application, integrate AI algorithms for resume screening. Also develop key security features. 
