--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
 
   <h2>Welcome to the new AI Recruitment system</h2>
 
-  <p>We help companies find the best talent using our new AI recruitment system.</p>
-  <p>Discover the intersection of human intelligence and artificial intelligence.</p>
+  <p>We help companies find the best talent using our new AI recruitment system and Discover the intersection of human intelligence and artificial intelligence</p>
 
 </div>
 </section>
