--- a/index.html
+++ b/index.html
@@ -297,16 +297,13 @@
                 businesses should rely on human’s decisions in the recruitment process. We also trained our system into different sets of ethical and moral rules
                 in order to possibly avoid bias and provide the appropriate analysis. As a result, this system will have the including features:
             </p>
-<p>Scan resume of candidates
-            </p>
-<p>Analyze past performance/stats and give a full report to businesses
-            </p>
-<p>Provide rating of a candidates
-            </p>
-<p>Automate send email to candidate
-            </p>
-<p>Automate schedule interview for candidates and recruiters
-            </p>
+  <ul>
+  <li>Scan resume of candidates</li>
+  <li>Analyze past performance/stats and give a full report to businesses</li>
+  <li>Provide rating of a candidates</li>
+  <li>Automate send email to candidate</li>
+  <li>Automate schedule interview for candidates and recruiters</li>
+</ul>
 <h4>Limitations</h4>
 <p>There are certain limits that AI engineers and businesses need to consider despite this is the project using AI to enhance the recruitment process.
                 Firstly, the insights and recommendations that this system provides will heavily depend on the quality and the relevance of data that AI engineers
