--- a/index.html
+++ b/index.html
@@ -366,48 +366,37 @@
                 members need to be coherent and fair for everyone to contribute. Thus, we have developed a timeframe consisting of 16 week of development, the
                 task will parallel with the week consecutively: 
             </p>
-<p>Week1: Planning and starting the project: Set project objectives, parameters, and specifications. Set up the project team and identify the important
-                key users. Perform preliminary study on AI technologies and hiring procedures. 
-            </p>
-<p>Week2: Analyzing and gathering requirements: To gather requirements, arrange workshops and user interviews. Examine the difficulties in the current
-                hiring procedures. Define the terms "functional" and "non-functional." 
-            </p>
-<p>Week3: User interface/User experience: Create the data flow, user interface, and user experience (UI/UX) for the system. Create prototypes and
-                wireframes for the important application components. Choose AI tools and techniques. 
-            </p>
-<p>Week4: Development: Develop the backend, frontend, and database of the application, integrate AI algorithms for resume screening. Also develop key
-                security features. 
-            </p>
-<p>Week5: Unit testing: Start application functionality testing, unit testing for individual components, integration testing for proper communication
-                between modules. 
-            </p>
-<p>Week6: User Acceptance Testing: Continue testing and bug-fixing, enhance the efficiency of the application, and begin user acceptance testing (UAT)
-                with a small number of recruiters and HR specialists. 
-            </p>
-<p>Week7: Feedback review: Take into account UAT input, improve application usability and functionality, and keep testing and fixing bugs. 
-            </p>
-<p>Week8: Deploy to a testing environment: Take into account UAT input, improve application usability and functionality, and keep testing and fixing
-                bugs. 
-            </p>
-<p>Week9: Feedback: Obtain feedback from hiring managers and HR specialists who have used the program, evaluate system performance, and deal with any
-                problems or requests for improvements. 
-            </p>
-<p>Week10: Optimization: Analyze user feedback and application performance, then continuously improve AI algorithms based on the data and information
-                you gather. 
-            </p>
-<p>Week11: Support and guideline:: Create user manuals and documentation, hold user training sessions for recruiters and HR experts, and get ready for
-                the application's launch. 
-            </p>
-<p>Week12: Finalize: Complete the project and keep gathering user feedbacks for future development of new features. 
-            </p>
-<p>Week13: Reflection: Reflection and analysis of project outcomes, identification of areas for improvement, and study of potential future additions. 
-            </p>
-<p>Week14: Feedback: Examine the use of the technology with a thorough interview with how the users feel working with the technology. 
-            </p>
-<p>Week15: Complete the project documentation, make any necessary changes to the project report in light of comments. 
-            </p>
-<p>Week16: Conduct a final review of the project and if able plan for future development.. 
-            </p>
+<ul>
+  <li>Week 1: Planning and starting the project: Set project objectives, parameters, and specifications. Set up the project team and identify the important 
+      key users. Perform preliminary study on AI technologies and hiring procedures.</li>
+  <li>Week 2: Analyzing and gathering requirements: To gather requirements, arrange workshops and user interviews. Examine the difficulties in the current 
+      hiring procedures. Define the terms "functional" and "non-functional." </li>
+  <li>Week 3: User interface/User experience: Create the data flow, user interface, and user experience (UI/UX) for the system. Create prototypes and
+      wireframes for the important application components. Choose AI tools and techniques.</li>
+  <li>Week 4: Development: Develop the backend, frontend, and database of the application, integrate AI algorithms for resume screening. Also develop key
+      security features.</li>
+  <li>Week 5: Unit testing: Start application functionality testing, unit testing for individual components, integration testing for proper communication
+      between modules.</li>
+  <li>Week 6: User Acceptance Testing: Continue testing and bug-fixing, enhance the efficiency of the application, and begin user acceptance testing (UAT)
+      with a small number of recruiters and HR specialists.</li>
+  <li>Week 7: Feedback review: Take into account UAT input, improve application usability and functionality, and keep testing and fixing bugs. </li>
+  <li>Week 8: Deploy to a testing environment: Take into account UAT input, improve application usability and functionality, and keep testing and fixing
+      bugs.</li>
+  <li>Week 9: Feedback: Obtain feedback from hiring managers and HR specialists who have used the program, evaluate system performance, and deal with any
+      problems or requests for improvements.</li>
+  <li>Week 10: Optimization: Analyze user feedback and application performance, then continuously improve AI algorithms based on the data and information
+      you gather.</li>
+  <li>Week 11: Support and guideline:: Create user manuals and documentation, hold user training sessions for recruiters and HR experts, and get ready for
+      the application's launch.</li>
+  <li>Week 12: Finalize: Complete the project and keep gathering user feedbacks for future development of new features.</li>
+  <li>Week 13: Reflection: Reflection and analysis of project outcomes, identification of areas for improvement, and study of potential future additions.</li>
+  <li>Week 14: Feedback: Examine the use of the technology with a thorough interview with how the users feel working with the technology. </li>
+  <li>Week 15: Complete the project documentation, make any necessary changes to the project report in light of comments.</li>
+  <li>Week 16: Conduct a final review of the project and if able plan for future development.</li>
+       
+</ul>        
+
+            
 <h3>4.8. Risks</h3>
 <p>As you know, AI is a very powerful system that can bring numerous benefits to businesses and HR departments. There are still some potential risks
                 and ethical issues related to this tool. By proactively approaching these risks and implementing appropriate solutions, businesses can enhance the
