--- a/index.html
+++ b/index.html
@@ -402,24 +402,22 @@
                 and ethical issues related to this tool. By proactively approaching these risks and implementing appropriate solutions, businesses can enhance the
                 system while minimizing potential drawbacks.Here are some key risks to consider:
             </p>
-<p>Firstly, new employees may not perform as effectively as their previous jobs. The reason for this is because real performance is based on the 
-                adaptation of employees on different sets of backgrounds and environments while the old historical data and resumes that AI learn only show the
-                performance of candidates on the previous job. Additionally, each person possesses unique personalities and characteristics that can influence
-                their performance in a new role.
-            </p>
-<p>Secondly, security issues and privacy issues are also big challenges for businesses. This is because our AI system requires different kinds of data
-                including resumes, application forms, and even some sensitive personal data such as behaviors, personality characteristics, biometric information
-                (race, face recognition fingerprint, etc). As a result, this will raise some data security concerns for users (candidates and recruiters) and
-                businesses.
-            </p>
-<p>Thirdly, despite the fact that the use of our AI system is to avoid bias in recruiters, recruitment processes using AI may also encounter some bias.
-                The reason for this is AI systems need to train from a wide range of statistics and actual data and these may be biased or reflect existing societal
-                prejudices.
-            </p>
-<p>Lasly, by utilizing almost everything using the AI system, it may cause a negative impact on a candidate's experience by reducing human interaction.
-                Many people with less skills and abilities than the rest will be frustrated because their jobs completely depend on AI and this may cause a negative
-                impact on society by creating more unemployment because companies will prefer better employees. This will raise enormous ethical problems.
-            </p>
+<ul>
+  <li>Firstly, new employees may not perform as effectively as their previous jobs. The reason for this is because real performance is based on the 
+      adaptation of employees on different sets of backgrounds and environments while the old historical data and resumes that AI learn only show the
+      performance of candidates on the previous job. Additionally, each person possesses unique personalities and characteristics that can influence
+      their performance in a new role.</li>
+  <li>Secondly, security issues and privacy issues are also big challenges for businesses. This is because our AI system requires different kinds of data
+      including resumes, application forms, and even some sensitive personal data such as behaviors, personality characteristics, biometric information
+      (race, face recognition fingerprint, etc). As a result, this will raise some data security concerns for users (candidates and recruiters) and
+      businesses.</li>
+  <li>Thirdly, despite the fact that the use of our AI system is to avoid bias in recruiters, recruitment processes using AI may also encounter some bias.
+      The reason for this is AI systems need to train from a wide range of statistics and actual data and these may be biased or reflect existing societal
+      prejudices.</li>
+  <li>Lasly, by utilizing almost everything using the AI system, it may cause a negative impact on a candidate's experience by reducing human interaction.
+      Many people with less skills and abilities than the rest will be frustrated because their jobs completely depend on AI and this may cause a negative
+      impact on society by creating more unemployment because companies will prefer better employees. This will raise enormous ethical problems.</li>
+</ul>
 </div></section>
 <section id="5. SKILLS AND JOBS">
     <div class="container">
